<resources>
    <string name="app_name">One Hundred</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="sold_items">Sold Items</string>
    <string name="products">products</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Setting</string>
    <string name="log_out">log Out</string>
</resources>