<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.onehundred.ui.activity.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.activity.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/splash" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/_5sdp"
                card_view:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/spl" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_15sdp" />
                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/gray_shape"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@color/colorAccent"
                            android:padding="@dimen/_7sdp"
                            android:src="@drawable/ic_user" />

                        <EditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/user_name"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/gray"
                            android:paddingStart="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:layout_marginBottom="@dimen/_40sdp"
                        android:background="@drawable/gray_shape"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@color/colorAccent"
                            android:padding="@dimen/_7sdp"
                            android:src="@drawable/ic_paasword" />

                        <EditText
                            android:id="@+id/user_password"
                            android:layout_width="match_parent"
                            android:textColorHint="@color/gray"
                            android:textColor="@android:color/black"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:paddingStart="@dimen/_10sdp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/colorAccent"
                        android:onClick="login"
                        android:text="@string/login"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </FrameLayout>

        <ProgressBar
            android:id="@+id/progrss"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </FrameLayout>
</layout>